# medalselfhostedserver

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile
config/: default.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml
crates/server/migrations/: 20240709_000001_initial.sql
crates/server/src/: config.rs  dashboard.html  db.rs  main.rs  models.rs  storage.rs
crates/server/src/routes/: clips.rs  dashboard.rs  embed.rs  mod.rs  upload.rs
crates/watcher/: Cargo.toml
crates/watcher/src/: main.rs
docs/: implementation-plan.md
