[package]
name = "medal-clone-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
actix-web = "4.14.0"
actix-files = "0.6.10"
actix-multipart = "0.8.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tokio = { version = "1.52.3", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
dotenvy = "0.15.7"
anyhow = "1.0.100"
nanoid = "0.5.0"
futures-util = "0.3.31"
mime_guess = "2.0.5"
rust-s3 = "0.37.2"
actix-cors = "0.7.1"

medal-clone-common = { path = "../common" }
