[package]
name = "medal-clone-watcher"
version = "0.1.0"
edition.workspace = true

[dependencies]
notify = "9.0.0-rc.4"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1.0.100"
dirs = "6.0.0"
clap = { version = "4.5.36", features = ["derive", "env"] }
[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
